# healthcare_ambient_scribe

./: .env.example  README.md  prd.md
.github/workflows/: ci.yml
ai_service/: main.py  pyproject.toml  test_redaction.py
backend/: README.md  pyproject.toml  run.sh  seed.py  seed_data.json
backend/src/: main.py
backend/tests/: test_audio_chunking.py  test_fhir_converter.py  test_llm_evals.py  test_redaction.py
frontend/: package.json  pnpm-lock.yaml  server.ts  tsconfig.server.json
frontend/api/: fhir.test.ts  index.ts
frontend/app/: page.tsx
frontend/prisma/: schema.prisma
frontend/tests/: demo-todo-app.spec.ts
scripts/: start-db.sh  start-fhir.sh  start-llm.sh  status.sh  stop-all.sh
