[project]
name = "healthcare-ambient-scribe"
version = "0.1.0"
description = "Local-first Healthcare Ambient Scribe - AI-powered clinical documentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "pydantic>=2.12.0",
    "python-multipart>=0.0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
